--- a/blogs/style/phuket/phuket.scss
+++ b/blogs/style/phuket/phuket.scss
@@ -33,6 +33,9 @@
   margin: 2rem 0;
   list-style-position: inside;
 }
+.li{
+  list-style-position: inside;
+}
 //TEXT STYLES -----------------------------------------------
 .span-italize {
   font-style: italic;
