--- a/styles/global-styles/footer/footer.style.scss
+++ b/styles/global-styles/footer/footer.style.scss
@@ -66,6 +66,7 @@
     .footer-h4 {
       text-align: center;
       // font-weight: 200;
+      font-size: 1rem;
       color: #cdced3;
     }
   }
