changed view lines in footer js

--- a/styles/blog-page/blog.style.scss
+++ b/styles/blog-page/blog.style.scss
@@ -245,6 +245,7 @@ header {
 
   .section-1-ul {
     display: flex;
+    align-items: center;
     margin: 1rem 0;
     color: rgb(109, 109, 109);
   }
