--- a/styles/blog-page/blog.style.css
+++ b/styles/blog-page/blog.style.css
@@ -272,6 +272,9 @@ header .header-p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 1rem 0;
   color: #6d6d6d;
 }
