--- a/styles/global-styles/footer/footer.style.css
+++ b/styles/global-styles/footer/footer.style.css
@@ -1,6 +1,7 @@
 .footer {
   background: #f1f2f8;
-  height: auto;
+  min-height: 20rem;
+  height: 100%;
 }
 
 .footer .footer-inner {
@@ -74,12 +75,12 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0.5rem 0;
+  margin: 0rem 0;
 }
 
 .footer .footer-ul .footer-li {
   list-style-type: none;
-  margin-top: 1rem;
+  margin-top: .2rem;
 }
 
 .footer .footer-align-container {
