--- a/styles/global-styles/footer/footer.style.scss
+++ b/styles/global-styles/footer/footer.style.scss
@@ -2,7 +2,8 @@
 
 .footer {
   background: #f1f2f8;
-  height: auto;
+  min-height: 20rem;
+  height: 100%;
   .footer-inner {
     width: 65vw;
     display: grid;
@@ -52,11 +53,11 @@
   .footer-ul {
     display: flex;
     flex-direction: column;
-    margin: 0.5rem 0;
+    margin: 0rem 0;
 
     .footer-li {
       list-style-type: none;
-      margin-top: 1rem;
+      margin-top: .2rem;
     }
   }
 
