--- a/styles/index.style.css
+++ b/styles/index.style.css
@@ -344,6 +344,16 @@
 }
 
 .section-2 .section-2-blog-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: #f8f8f8;
   color: #0770E7;
   padding: 1.5rem 2rem;
