--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -266,6 +266,9 @@
     margin-right: 1rem;
   }
   .section-2-blog-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background: rgb(248, 248, 248);
     color: $main-color;
     padding: 1.5rem 2rem;
