--- a/napravlenie/styles/napravlenie.css
+++ b/napravlenie/styles/napravlenie.css
@@ -36,6 +36,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 2rem 0;
 }
 
 .section-1 {
